@@ -4,34 +4,39 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import ru.practicum.shareit.item.dto.ItemDto;
-import ru.practicum.shareit.user.UserService;
+import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.user.UserRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
     private final ItemRepository repository;
-    private final UserService userService;
-    private final ItemMapper itemMapper;
+    private final UserRepository userRepository;
 
     @Override
     public List<ItemDto> getItemsByOwnerId(Long userId) {
-        return repository.getItemsByOwnerId(userId);
+        log.info("Получение всех вещей владельца с id =  {}", userId);
+        return repository.getItemsByOwnerId(userId).stream()
+                .map(ItemMapper::toItemDto)
+                .toList();
     }
 
     @Override
     public ItemDto getItem(Long itemId) {
-        return itemMapper.toItemDto(repository.getItem(itemId));
+        log.info("Получение вещи по id = {}", itemId);
+        return ItemMapper.toItemDto(repository.getItem(itemId));
     }
 
 
     @Override
-    public ItemDto createItem(ItemDto itemDto) {
-        userService.getUserById(itemDto.getOwnerId());
-        return itemMapper.toItemDto(repository.createItem(itemDto), userService.getUserById(itemDto.getOwnerId()).getId());
+    public ItemDto createItem(ItemDto itemDto, Long userId) {
+        log.info("Создание новой вещи пользователем с id = {}", userId);
+        userRepository.getUserById(userId);
+        Item newItem = ItemMapper.toItem(itemDto, null, null, userId);
+        return ItemMapper.toItemDto(repository.createItem(newItem));
     }
 
     @Override
@@ -39,20 +44,24 @@ public class ItemServiceImpl implements ItemService {
         if (text == null || text.isBlank()) {
             return List.of();
         }
+        log.info("Поиск вещей по тексту: {}", text);
         return repository.searchItems(text).stream()
-                .map(item -> itemMapper.toItemDto(item, userService.getUserById(item.getOwnerId()).getId()))
-                .collect(Collectors.toList());
+                .map(ItemMapper::toItemDto)
+                .toList();
     }
 
 
     @Override
-    public ItemDto updateItem(ItemDto itemDto) {
-        return itemMapper.toItemDto(repository.updateItem(itemDto));
+    public ItemDto updateItem(ItemDto itemDto, Long userId) {
+        log.info("Обновление вещи с id =  {} пользователем с id = {}", itemDto.getId(), userId);
+        Item updatedItem = ItemMapper.toItem(itemDto, itemDto.getId(), null, userId);
+        return ItemMapper.toItemDto(repository.updateItem(updatedItem));
     }
 
 
     @Override
     public void deleteItem(Long userId, Long itemId) {
+        log.info("Удаление вещи с id = {} пользователем с id = {}", itemId, userId);
         repository.deleteItem(userId, itemId);
     }
 
